--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
