--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@mui/material": "^5.10.15",
+    "@mui/x-data-grid": "^5.17.17",
     "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
