--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.15",
     "@mui/x-data-grid": "^5.17.17",
     "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-table": "^7.8.0"
