--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^5.10.15",
     "@mui/x-data-grid": "^5.17.17",
     "axios": "^1.1.3",
+    "chart.js": "^4.2.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-table": "^7.8.0"
   },
