--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.10.15",
+    "@mui/material": "^5.11.12",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@mui/x-data-grid": "^5.17.17",
+    "@mui/x-date-pickers": "^6.0.1",
     "axios": "^1.1.3",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
@@ -25,7 +28,8 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
