--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/x-data-grid": "^5.17.17",
     "@mui/x-date-pickers": "^6.0.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.1.3",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
-    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-table": "^7.8.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
