--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "axios": "^1.1.3",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
+    "docx-preview": "^0.1.15",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "jszip": "^3.10.1",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
