--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-table": "^7.8.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "swr": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
